.workspace-data/cache/repo-33e59f1f5d53b03b/test/development/mcp-server/fixtures/compilation-errors-app/app/syntax-error/page.tsx
export default function SyntaxErrorPage() {
  return <div>Broken JSX
}
